--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+window-vibrancy = "0.6.0"
 
 [features]
 # by default Tauri runs in production mode
