--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ tauri-plugin-opener = "2"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 window-vibrancy = "0.6.0"
+dunce = "1.0"
 
 tauri-plugin-global-shortcut = "2.0.0-beta.7"
 [features]
